@@ -6,6 +6,10 @@ Version 3.11.2  (unrleased)
 
  - Add CONTRIBUTING.md file
 
+ - Return the table info row last in statistics_info.
+    This fixes statistics_info on pre-8.3 servers.
+   [Dagfinn Ilmari Mannsåker]
+
 
 Version 3.11.1  (released April 28, 2020)
 
